Создает разметку страницы

--- a/source/index.html
+++ b/source/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Лига Банк | Конвертер валют</title>
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
@@ -40,15 +40,222 @@
         <path d="M8 0c2.174 0 2.445.008 3.298.048.852.04 1.432.174 1.942.372a3.9 3.9 0 011.418.922c.406.4.721.884.922 1.418.198.51.332 1.09.372 1.942C15.99 5.555 16 5.826 16 8s-.008 2.445-.048 3.298c-.04.852-.174 1.432-.372 1.942a3.907 3.907 0 01-.922 1.418 3.94 3.94 0 01-1.418.922c-.51.198-1.09.332-1.942.372C10.445 15.99 10.174 16 8 16s-2.445-.008-3.298-.048c-.852-.04-1.432-.174-1.942-.372a3.911 3.911 0 01-1.418-.922A3.923 3.923 0 01.42 13.24c-.198-.51-.332-1.09-.372-1.942C.01 10.445 0 10.174 0 8s.008-2.445.048-3.298C.088 3.85.222 3.27.42 2.76c.2-.534.515-1.018.922-1.418.4-.407.884-.721 1.418-.922C3.27.222 3.85.088 4.702.048 5.555.01 5.826 0 8 0zm0 4a4 4 0 100 8 4 4 0 000-8zm5.2-.2a1 1 0 10-2 0 1 1 0 002 0zM8 5.6a2.4 2.4 0 110 4.8 2.4 2.4 0 010-4.8z" fill="#1F1E25"></path>
       </symbol>
     </svg>
-    <!-- <svg class="icon"><use xlink:href="#login"></use></svg>
-    <svg class="icon"><use xlink:href="#phone"></use></svg>
-    <svg class="icon"><use xlink:href="#telephone"></use></svg>
-    <svg class="icon"><use xlink:href="#twitter"></use></svg>
-    <svg class="icon"><use xlink:href="#youtube"></use></svg>
-    <svg class="icon"><use xlink:href="#arrow-down"></use></svg>
-    <svg class="icon"><use xlink:href="#arrow-right"></use></svg>
-    <svg class="icon"><use xlink:href="#calendar"></use></svg>
-    <svg class="icon"><use xlink:href="#fb"></use></svg>
-    <svg class="icon"><use xlink:href="#insta"></use></svg> -->
+    <!--
+    <svg class="icon" width="" height=""><use xlink:href="#phone"></use></svg>
+    <svg class="icon" width="" height=""><use xlink:href="#telephone"></use></svg>
+    <svg class="icon" width="" height=""><use xlink:href="#arrow-down"></use></svg>
+    <svg class="icon" width="" height=""><use xlink:href="#arrow-right"></use></svg>
+    <svg class="icon" width="" height=""><use xlink:href="#calendar"></use></svg>
+     -->
+    <header class="page-header container">
+      <div class="page-header__wrapper">
+        <a href="#" class="logo" aria-label="На главную">
+          <img class="logo__image" src="img/logo.svg" width="150" height="25" alt="Логотип Лига Банк" >
+        </a>
+        <nav class="page-header__nav main-nav">
+          <ul class="main-nav__list">
+            <li class="main-nav__item">
+              <a href="#" class="main-nav__link">Услуги</a>
+            </li>
+            <li class="main-nav__item">
+              <a href="#" class="main-nav__link">Рассчитать кредит</a>
+            </li>
+            <li class="main-nav__item">
+              <a class="main-nav__link main-nav__link--active">Конвертер валют</a>
+            </li>
+            <li class="main-nav__item">
+              <a href="#" class="main-nav__link">Контакты</a>
+            </li>
+            <li class="main-nav__item">
+              <a href="#" class="main-nav__link">Задать вопрос</a>
+            </li>
+          </ul>
+        </nav>
+        <ul class="user-nav">
+          <li class="user-nav__item">
+            <a href="#" class="user-nav__link">
+              <svg class="icon" width="20" height="22"><use xlink:href="#login"></use></svg>
+              <span>Войти в Интернет-банк</span>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </header>
+    <main>
+      <article class="hero container">
+        <h2 class="hero__title">Лига Банк</h2>
+        <p class="hero__text">Кредиты на любой случай</p>
+        <a class="hero__link" href="#">Рассчитать кредит</a>
+      </article>
+
+      <section class="converter container">
+        <h1 class="page-title">Конвертер валют</h1>
+        <form action="#" class="convert-form" method="GET">
+          <p class="convert-form__field field">
+            <label class="field__label" for="sale">У меня есть</label>
+            <input class="field__input" type="number" id="sale" name="sale">
+            <label class="visually-hidden" for="currency-sale">Выберите валюту</label>
+            <select name="currency" id="currency-sale">
+              <option value="rub" selected>RUB</option>
+              <option value="usd">USD</option>
+              <option value="eur">EUR</option>
+              <option value="gbr">GBR</option>
+              <option value="cny">CNY</option>
+            </select>
+          </p>
+          <p class="convert-form__field field">
+            <label class="field__label" for="buy">Хочу приобрести</label>
+            <input class="field__input" type="number" id="buy" name="buy">
+            <label class="visually-hidden" for="currency-buy">Выберите валюту</label>
+            <select name="currency" id="currency-buy">
+              <option value="rub">RUB</option>
+              <option value="usd" selected>USD</option>
+              <option value="eur">EUR</option>
+              <option value="gbr">GBR</option>
+              <option value="cny">CNY</option>
+            </select>
+          </p>
+          <p class="convert-form__field field">
+            <label class="visually-hidden" for="date">Дата для расчета курса валют</label>
+            <input class="field__input" type="text" id="date" name="date" datetime="2020-12-01" value="1.12.2020">
+          </p>
+          <button type="submit">Сохранить результат</button>
+        </form>
+      </section>
+
+      <section class="history container">
+        <h2 class="history__title">История конвертации</h2>
+          <ul class="history__list history__list--left">
+            <li class="history__item operation">
+              <span class="operation__date" datetime="2020-11-25">25.11.2020</span>
+              <span class="operation__sum operation__sum--sold">1000 </span>
+              <span class="operation__currency operation__currency--sale">RUB</span>
+              <span class="operation__sum operation__sum--sold">13,1234 </span>
+              <span class="operation__currency operation__currency--sale">USD</span>
+            </li>
+            <li class="history__item operation">
+              <span class="operation__date" datetime="2020-11-25">25.11.2020</span>
+              <span class="operation__sum operation__sum--sold">1000 </span>
+              <span class="operation__currency operation__currency--sale">RUB</span>
+              <span class="operation__sum operation__sum--sold">13,1234 </span>
+              <span class="operation__currency operation__currency--sale">USD</span>
+            </li>
+            <li class="history__item operation">
+              <span class="operation__date" datetime="2020-11-25">25.11.2020</span>
+              <span class="operation__sum operation__sum--sold">1000 </span>
+              <span class="operation__currency operation__currency--sale">RUB</span>
+              <span class="operation__sum operation__sum--sold">13,1234 </span>
+              <span class="operation__currency operation__currency--sale">USD</span>
+            </li>
+            <li class="history__item operation">
+              <span class="operation__date" datetime="2020-11-25">25.11.2020</span>
+              <span class="operation__sum operation__sum--sold">1000 </span>
+              <span class="operation__currency operation__currency--sale">RUB</span>
+              <span class="operation__sum operation__sum--sold">13,1234 </span>
+              <span class="operation__currency operation__currency--sale">USD</span>
+            </li>
+            <li class="history__item operation">
+              <span class="operation__date" datetime="2020-11-25">25.11.2020</span>
+              <span class="operation__sum operation__sum--sold">1000 </span>
+              <span class="operation__currency operation__currency--sale">RUB</span>
+              <span class="operation__sum operation__sum--sold">13,1234 </span>
+              <span class="operation__currency operation__currency--sale">USD</span>
+            </li>
+          </ul>
+          <ul class="history__list history__list--right">
+            <li class="history__item operation">
+              <span class="operation__date" datetime="2020-11-25">25.11.2020</span>
+              <span class="operation__sum operation__sum--sold">1000 </span>
+              <span class="operation__currency operation__currency--sale">RUB</span>
+              <span class="operation__sum operation__sum--sold">13,1234 </span>
+              <span class="operation__currency operation__currency--sale">USD</span>
+            </li>
+            <li class="history__item operation">
+              <span class="operation__date" datetime="2020-11-25">25.11.2020</span>
+              <span class="operation__sum operation__sum--sold">1000 </span>
+              <span class="operation__currency operation__currency--sale">RUB</span>
+              <span class="operation__sum operation__sum--sold">13,1234 </span>
+              <span class="operation__currency operation__currency--sale">USD</span>
+            </li>
+            <li class="history__item operation">
+              <span class="operation__date" datetime="2020-11-25">25.11.2020</span>
+              <span class="operation__sum operation__sum--sold">1000 </span>
+              <span class="operation__currency operation__currency--sale">RUB</span>
+              <span class="operation__sum operation__sum--sold">13,1234 </span>
+              <span class="operation__currency operation__currency--sale">USD</span>
+            </li>
+            <li class="history__item operation">
+              <span class="operation__date" datetime="2020-11-25">25.11.2020</span>
+              <span class="operation__sum operation__sum--sold">1000 </span>
+              <span class="operation__currency operation__currency--sale">RUB</span>
+              <span class="operation__sum operation__sum--sold">13,1234 </span>
+              <span class="operation__currency operation__currency--sale">USD</span>
+            </li>
+            <li class="history__item operation">
+              <span class="operation__date" datetime="2020-11-25">25.11.2020</span>
+              <span class="operation__sum operation__sum--sold">1000 </span>
+              <span class="operation__currency operation__currency--sale">RUB</span>
+              <span class="operation__sum operation__sum--sold">13,1234 </span>
+              <span class="operation__currency operation__currency--sale">USD</span>
+            </li>
+          </ul>
+          <button class="history__reset" type="button">Очистить историю</button>
+      </section>
+    </main>
+
+    <footer class="page-footer container">
+      <div class="page-footer__wrapper">
+        <div class="page-footer__item info">
+          <a href="#" class="logo" aria-label="На главную">
+            <img class="logo__image" src="img/logo.svg" width="150" height="25" alt="Логотип Лига Банк" >
+          </a>
+          <address class="info__text">150015, г. Москва, ул. Московская, д. 32</address>
+          <p class="info__text">Генеральная лицензия Банка России №1050</p>
+          <p class="info__text">&copy; Лига Банк, 2019</p>
+        </div>
+
+        <div class="page-footer__item footer-nav">
+          <ul class="footer-nav__list">
+            <li class="footer-nav__item"><a href="#" class="footer-nav__link">Услуги</a></li>
+            <li class="footer-nav__item"><a href="#" class="footer-nav__link">Рассчитать кредит</a></li>
+            <li class="footer-nav__item"><a href="#" class="footer-nav__link">Контакты</a></li>
+            <li class="footer-nav__item"><a href="#" class="footer-nav__link">Задать вопрос</a></li>
+          </ul>
+        </div>
+
+        <div class="page-footer__item contact">
+          <a class="contact-link contact-link--short" href="tel:0904">*0904</a>
+          <p class="contact__text">Бесплатно для абонентов МТС, Билайн, Мегафон, Теле2</p>
+        </div>
+        <div class="page-footer__item contact">
+          <a class="contact-link contact-link--long" href="tel:+78001112233">8 800 111 22 33</a>
+          <p class="contact__text">Бесплатный для всех городов России</p>
+         </div>
+        <div class="page-footer__item social">
+          <ul class="social__list">
+            <li class="social__item">
+              <a href="#" class="social__link" aria-label="Лига Банк в фейсбук">
+                <svg class="icon" width="9" height="16"><use xlink:href="#fb"></use></svg>
+              </a>
+            </li>
+            <li class="social__item">
+              <a href="#" class="social__link" aria-label="Лига Банк в Инстаграм">
+                <svg class="icon" width="16" height="16"><use xlink:href="#insta"></use></svg>
+              </a>
+            </li>
+            <li class="social__item">
+              <a href="#" class="social__link" aria-label="Лига Банк в Твиттере">
+                <svg class="icon" width="16" height="13"><use xlink:href="#twitter"></use></svg>
+              </a>
+            </li>
+            <li class="social__item">
+              <a href="#" class="social__link" aria-label="Лига Банк на Ютюб">
+                <svg class="icon" width="16" height="13"><use xlink:href="#youtube"></use></svg>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
