Задает стили для шапки сайта

--- a/source/index.html
+++ b/source/index.html
@@ -49,7 +49,7 @@
      -->
     <header class="page__header main-header">
       <div class="main-header__wrapper">
-        <a href="#" class="logo" aria-label="На главную">
+        <a href="#" class="main-header__logo logo" aria-label="На главную">
           <img class="logo__image" src="img/logo.svg" width="150" height="25" alt="Логотип Лига Банк" >
         </a>
         <nav class="main-header__nav main-nav">
@@ -61,7 +61,7 @@
               <a href="#" class="main-nav__link">Рассчитать кредит</a>
             </li>
             <li class="main-nav__item">
-              <a class="main-nav__link main-nav__link--active">Конвертер валют</a>
+              <a class="main-nav__link main-nav__link--current">Конвертер валют</a>
             </li>
             <li class="main-nav__item">
               <a href="#" class="main-nav__link">Контакты</a>
@@ -71,7 +71,7 @@
             </li>
           </ul>
         </nav>
-        <ul class="user-nav">
+        <ul class="main-header__user-nav user-nav">
           <li class="user-nav__item">
             <a href="#" class="user-nav__link">
               <svg class="icon" width="20" height="22"><use xlink:href="#login"></use></svg>
