--- a/source/index.html
+++ b/source/index.html
@@ -23,16 +23,6 @@
       <symbol fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 13" id="youtube">
         <path d="M15.634 2.03C16 3.478 16 6.5 16 6.5s0 3.023-.366 4.47c-.203.8-.797 1.43-1.55 1.643C12.717 13 8 13 8 13s-4.714 0-6.084-.387c-.756-.216-1.35-.845-1.55-1.643C0 9.523 0 6.5 0 6.5s0-3.022.366-4.47c.203-.8.797-1.43 1.55-1.643C3.286 0 8 0 8 0s4.717 0 6.084.387c.756.216 1.35.845 1.55 1.643zM6.4 9.344L11.2 6.5 6.4 3.656v5.688z" fill="#1F1E25"></path>
       </symbol>
-      <symbol fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 18 11" id="arrow-down">
-        <path d="M1 1l8 8 8-8" stroke="#1F1E25" stroke-width="2"></path>
-      </symbol>
-      <symbol fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 41 18" id="arrow-right">
-        <path d="M27.2 17L40 9 27.2 1M40 9H0" stroke="#1F1E25"></path>
-      </symbol>
-      <symbol fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 41 44" id="calendar">
-        <path d="M1 14.183h39M8 1l.09 9.742M33 1v10m7 29V9a3 3 0 00-3-3H4a3 3 0 00-3 3v31a3 3 0 003 3h33a3 3 0 003-3z" stroke="#000"></path>
-        <path d="M5 19h3m4.09 0h3m4.092 0h3m4.091 0h3m4.09 0h3M5 25h3m4.09 0h3m4.092 0h3m4.091 0h3m4.09 0h3M5 31h3m4.09 0h3m4.092 0h3m4.091 0h3m4.09 0h3M5 37h3m4.09 0h3m4.092 0h3m4.091 0h3m4.09 0h3" stroke="#2C36F2" stroke-width="3"></path>
-      </symbol>
       <symbol fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 9 16" id="fb">
         <path d="M6 9.2h2.143L9 6H6V4.4c0-.824 0-1.6 1.714-1.6H9V.112A25.85 25.85 0 006.551 0c-2.327 0-3.98 1.326-3.98 3.76V6H0v3.2h2.571V16H6V9.2z" fill="#1F1E25"></path>
       </symbol>
@@ -40,13 +30,6 @@
         <path d="M8 0c2.174 0 2.445.008 3.298.048.852.04 1.432.174 1.942.372a3.9 3.9 0 011.418.922c.406.4.721.884.922 1.418.198.51.332 1.09.372 1.942C15.99 5.555 16 5.826 16 8s-.008 2.445-.048 3.298c-.04.852-.174 1.432-.372 1.942a3.907 3.907 0 01-.922 1.418 3.94 3.94 0 01-1.418.922c-.51.198-1.09.332-1.942.372C10.445 15.99 10.174 16 8 16s-2.445-.008-3.298-.048c-.852-.04-1.432-.174-1.942-.372a3.911 3.911 0 01-1.418-.922A3.923 3.923 0 01.42 13.24c-.198-.51-.332-1.09-.372-1.942C.01 10.445 0 10.174 0 8s.008-2.445.048-3.298C.088 3.85.222 3.27.42 2.76c.2-.534.515-1.018.922-1.418.4-.407.884-.721 1.418-.922C3.27.222 3.85.088 4.702.048 5.555.01 5.826 0 8 0zm0 4a4 4 0 100 8 4 4 0 000-8zm5.2-.2a1 1 0 10-2 0 1 1 0 002 0zM8 5.6a2.4 2.4 0 110 4.8 2.4 2.4 0 010-4.8z" fill="#1F1E25"></path>
       </symbol>
     </svg>
-    <!--
-
-    <svg class="icon" width="" height=""><use xlink:href="#telephone"></use></svg>
-    <svg class="icon" width="" height=""><use xlink:href="#arrow-down"></use></svg>
-    <svg class="icon" width="" height=""><use xlink:href="#arrow-right"></use></svg>
-    <svg class="icon" width="" height=""><use xlink:href="#calendar"></use></svg>
-     -->
     <header class="page__header main-header">
       <div class="main-header__wrapper">
         <a href="#" class="main-header__logo logo" aria-label="На главную">
@@ -74,7 +57,7 @@
         <ul class="main-header__user-nav user-nav">
           <li class="user-nav__item">
             <a href="#" class="user-nav__link">
-              <svg class="icon" width="20" height="22"><use xlink:href="#login"></use></svg>
+              <svg class="user-nav__icon" width="20" height="22"><use xlink:href="#login"></use></svg>
               <span>Войти в Интернет-банк</span>
             </a>
           </li>
@@ -127,7 +110,7 @@
           <div class="convert-form__wrapper">
             <p class="convert-form__field field">
               <label class="visually-hidden" for="date">Дата для расчета курса валют</label>
-              <input class="field__control field__control--input" type="text" id="date" name="date" value="1.12.2020">
+              <input class="field__control field__control--input field__control--date" type="text" id="date" name="date" value="1.12.2020">
             </p>
             <button class="convert-form__button button" type="submit">Сохранить результат</button>
           </div>
@@ -135,82 +118,51 @@
       </section>
 
       <section class="history">
-        <h2 class="history__title">История конвертации</h2>
-          <ul class="history__list history__list--left">
-            <li class="history__item operation">
-              <span class="operation__date">25.11.2020</span>
-              <span class="operation__sum operation__sum--sold">1000 </span>
-              <span class="operation__currency operation__currency--sale">RUB</span>
-              <span class="operation__sum operation__sum--sold">13,1234 </span>
-              <span class="operation__currency operation__currency--sale">USD</span>
-            </li>
-            <li class="history__item operation">
-              <span class="operation__date">25.11.2020</span>
-              <span class="operation__sum operation__sum--sold">1000 </span>
-              <span class="operation__currency operation__currency--sale">RUB</span>
-              <span class="operation__sum operation__sum--sold">13,1234 </span>
-              <span class="operation__currency operation__currency--sale">USD</span>
-            </li>
-            <li class="history__item operation">
-              <span class="operation__date">25.11.2020</span>
-              <span class="operation__sum operation__sum--sold">1000 </span>
-              <span class="operation__currency operation__currency--sale">RUB</span>
-              <span class="operation__sum operation__sum--sold">13,1234 </span>
-              <span class="operation__currency operation__currency--sale">USD</span>
-            </li>
-            <li class="history__item operation">
-              <span class="operation__date">25.11.2020</span>
-              <span class="operation__sum operation__sum--sold">1000 </span>
-              <span class="operation__currency operation__currency--sale">RUB</span>
-              <span class="operation__sum operation__sum--sold">13,1234 </span>
-              <span class="operation__currency operation__currency--sale">USD</span>
-            </li>
-            <li class="history__item operation">
-              <span class="operation__date">25.11.2020</span>
-              <span class="operation__sum operation__sum--sold">1000 </span>
-              <span class="operation__currency operation__currency--sale">RUB</span>
-              <span class="operation__sum operation__sum--sold">13,1234 </span>
-              <span class="operation__currency operation__currency--sale">USD</span>
-            </li>
-          </ul>
-          <ul class="history__list history__list--right">
-            <li class="history__item operation">
-              <span class="operation__date">25.11.2020</span>
-              <span class="operation__sum operation__sum--sold">1000 </span>
-              <span class="operation__currency operation__currency--sale">RUB</span>
-              <span class="operation__sum operation__sum--sold">13,1234 </span>
-              <span class="operation__currency operation__currency--sale">USD</span>
-            </li>
-            <li class="history__item operation">
-              <span class="operation__date">25.11.2020</span>
-              <span class="operation__sum operation__sum--sold">1000 </span>
-              <span class="operation__currency operation__currency--sale">RUB</span>
-              <span class="operation__sum operation__sum--sold">13,1234 </span>
-              <span class="operation__currency operation__currency--sale">USD</span>
-            </li>
-            <li class="history__item operation">
-              <span class="operation__date">25.11.2020</span>
-              <span class="operation__sum operation__sum--sold">1000 </span>
-              <span class="operation__currency operation__currency--sale">RUB</span>
-              <span class="operation__sum operation__sum--sold">13,1234 </span>
-              <span class="operation__currency operation__currency--sale">USD</span>
-            </li>
-            <li class="history__item operation">
-              <span class="operation__date">25.11.2020</span>
-              <span class="operation__sum operation__sum--sold">1000 </span>
-              <span class="operation__currency operation__currency--sale">RUB</span>
-              <span class="operation__sum operation__sum--sold">13,1234 </span>
-              <span class="operation__currency operation__currency--sale">USD</span>
-            </li>
-            <li class="history__item operation">
-              <span class="operation__date">25.11.2020</span>
-              <span class="operation__sum operation__sum--sold">1000 </span>
-              <span class="operation__currency operation__currency--sale">RUB</span>
-              <span class="operation__sum operation__sum--sold">13,1234 </span>
-              <span class="operation__currency operation__currency--sale">USD</span>
-            </li>
-          </ul>
-          <button class="history__reset" type="button">Очистить историю</button>
+        <div class="history__wrapper">
+          <h2 class="history__title">История конвертации</h2>
+            <div class="history__container">
+              <ul class="history__list history__list--left">
+                <li class="history__item operation">
+                  <span class="operation__date">25.11.2020</span>
+                  <span class="operation__sum operation__sum--sale">1000 RUB</span>
+                  <span class="operation__sum operation__sum--perchase">13,1234 USD</span>
+                </li>
+                <li class="history__item operation">
+                  <span class="operation__date">25.11.2020</span>
+                  <span class="operation__sum operation__sum--sale">1000 RUB</span>
+                  <span class="operation__sum operation__sum--perchase">13,1234 USD</span>
+                </li>
+                <li class="history__item operation">
+                  <span class="operation__date">25.11.2020</span>
+                  <span class="operation__sum operation__sum--sale">1000 RUB</span>
+                  <span class="operation__sum operation__sum--perchase">13,1234 USD</span>
+                </li>
+                <li class="history__item operation">
+                  <span class="operation__date">25.11.2020</span>
+                  <span class="operation__sum operation__sum--sale">1000 RUB</span>
+                  <span class="operation__sum operation__sum--perchase">13,1234 USD</span>
+                </li>
+                <li class="history__item operation">
+                  <span class="operation__date">25.11.2020</span>
+                  <span class="operation__sum operation__sum--sale">1000 RUB</span>
+                  <span class="operation__sum operation__sum--perchase">13,1234 USD</span>
+                </li>
+              </ul>
+              <ul class="history__list history__list--right">
+                <li class="history__item operation">
+                  <span class="operation__date">25.11.2020</span>
+                  <span class="operation__sum operation__sum--sale">1000 RUB</span>
+                  <span class="operation__sum operation__sum--perchase">13,1234 USD</span>
+                </li>
+                <li class="history__item operation">
+                  <span class="operation__date">25.11.2020</span>
+                  <span class="operation__sum operation__sum--sale">1000 RUB</span>
+                  <span class="operation__sum operation__sum--perchase">13,1234 USD</span>
+                </li>
+              </ul>
+            </div>
+            <button class="history__button button" type="button">Очистить историю</button>
+        </div>
       </section>
     </main>
 
