Добавляет тег для предзагрузки шрифтов

--- a/source/index.html
+++ b/source/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Лига Банк | Конвертер валют</title>
+    <link rel="preload" href="fonts/roboto-regular.woff2" as="font" crossorigin="anonymous">
+    <link rel="preload" href="fonts/roboto-bold.woff2" as="font" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body class="page__body">
